--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "node-js-getting-started",
+  "name": "a-new-home",
   "version": "0.1.3",
-  "description": "A sample Node.js app using Express 4",
+  "private": true,
+  "description": "TODO",
+  "license": "TODO",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "express": "~4.9.x"
-  },
   "engines": {
     "node": "0.12.x"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/chuckus/a-new-home"
   },
   "keywords": [
     "node",
     "heroku",
     "express"
   ],
-  "license": "MIT"
+  "dependencies": {
+    "express": "~4.9.x"
+  },
+  "scripts": {
+    "start": "node index.js"
+  }
 }
