--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   ],
   "dependencies": {
     "express": "~4.9.x",
-    "handlebars": "^3.0.1"
+    "handlebars": "^3.0.1",
+    "hbs": "^3.0.1"
   },
   "scripts": {
     "start": "node src/server.js"
