--- a/.jscsrc
+++ b/.jscsrc
@@ -1,8 +1,8 @@
 {
-  "preset": "google",
-  "disallowSpacesInAnonymousFunctionExpression": null,
-  "validateLineBreaks": "LF",
-  "validateIndentation": 2,
+  "preset": "airbnb",
+
   "excludeFiles": ["build/**", "node_modules/**"],
-  "esprima": "esprima-fb"
+
+  "validateLineBreaks": "LF",
+  "validateIndentation": 4
 }
