--- a/package.json
+++ b/package.json
@@ -18,19 +18,27 @@
     "express"
   ],
   "devDependencies": {
+    "babelify": "^6.0.2",
+    "browser-sync": "^2.5.3",
+    "browserify": "^9.0.8",
     "eslint": "^0.18.0",
+    "gulp": "^3.8.11",
     "jscs": "^1.12.0",
-    "nodemon": "^1.3.7"
+    "nodemon": "^1.3.7",
+    "reactify": "^1.1.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "body-parser": "~1.0.0",
     "express": "~4.9.x",
     "hbs": "^3.0.1",
-    "body-parser": "~1.0.0",
+    "jquery": "^2.1.3",
     "mongodb": "~1.4",
-    "mongoskin": "*"
+    "mongoskin": "*",
+    "react": "^0.13.1"
   },
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "nodemon src/server.js & gulp watch",
     "test": "eslint src/ && jscs src/"
   }
 }
