--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "body-parser": "~1.0.0",
+    "chartist": "^0.7.3",
     "express": "~4.9.x",
     "hbs": "^3.0.1",
     "jquery": "^2.1.3",
