Finally got method of updating suburbs with number of bus stops

--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "development": {
     "mongoDatabase": "wellington",
     "mongoPort": 27017,
-    "mongoHost": "127.0.0.1",
+    "mongoHost": "localhost",
     "errorHandlerOptions": {"dumpExceptions": true, "showStack": true}
   },
   "production": {
