--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "express": "~4.9.x",
     "hbs": "^3.0.1",
     "jquery": "^2.1.3",
-    "mongodb": "~1.4",
+    "mongodb": "*",
     "mongoskin": "*",
     "react": "^0.13.1",
     "googlemaps": "*"
